Slides_01 new content

--- a/Slides_01.html
+++ b/Slides_01.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Untitled</title>
+  <title>Slide Demonstration</title>
 
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -21,7 +21,7 @@
     var SLIDE_CONFIG = {
       // Slide settings
       settings: {
-                title: 'Untitled',
+                title: 'Slide Demonstration',
                         useBuilds: true,
         usePrettify: true,
         enableSlideAreas: true,
@@ -98,17 +98,21 @@
           </hgroup>
   </slide>
 
-<slide class=""><hgroup><h2>R Markdown</h2></hgroup><article  id="r-markdown">
+<slide class=""><hgroup><h2>Slide 1</h2></hgroup><article  id="slide-1">
 
-<p>This is an R Markdown presentation. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <a href='http://rmarkdown.rstudio.com' title=''>http://rmarkdown.rstudio.com</a>.</p>
-
-<p>When you click the <strong>Knit</strong> button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document.</p>
-
-</article></slide><slide class=""><hgroup><h2>Slide with Bullets</h2></hgroup><article  id="slide-with-bullets">
+<p>Default content</p>
 
 <ul>
-<li>Bullet 1</li>
-<li>Bullet 2</li>
+<li>Bullet 1<br/></li>
+<li>Bullet 2<br/></li>
+<li>Bullet 3</li>
+</ul>
+
+</article></slide><slide class=""><hgroup><h2>Slide 2</h2></hgroup><article  id="slide-2">
+
+<ul>
+<li>Bullet 1<br/></li>
+<li>Bullet 2<br/></li>
 <li>Bullet 3</li>
 </ul>
 
